# resonator-data-platform

./: .env.example  .gitignore  CLAUDE.md  README-desktop.md  README.md  bootstrap.ps1  bootstrap.sh  build.py  dev-down.sh  dev.sh  pyproject.toml  谐振器数据平台-需求文档.md
backend/: Dockerfile  README.md  alembic.ini  build_backend.py  desktop_entry.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_06_02_152756_add_partial_indexes.py  2026_06_02_153000_add_materialized_views.py  2026_06_10_140500_add_batch_raw_zip_path.py  2026_06_30_120000_add_file_nodes.py  2026_07_03_120000_add_deembed_stage.py  2026_07_06_150000_add_task_cancelled.py  2026_07_06_160000_add_task_kind.py  2f38e7f18d1b_initial_schema.py  43bc63841421_add_batch_source_and_device_unique_.py  4c39d930041d_add_upload_task_stage.py  70da8915313e_add_batch_deembed_method.py  78bd1c93213e_add_device_s_param_port.py  86e423b88f70_allow_batch_process_type_auto.py
backend/app/: config.py  db.py  desktop_setup.py  main.py
backend/app/api/: batches.py  deps.py  devices.py  export.py  files.py  mappings.py  query.py  system.py  tasks.py  upload.py
backend/app/core/: __init__.py  curves.py  (+5 more)
backend/scripts/: benchmark_pinn.py  bulk_upload.py  cleanup_duplicates.py  train_loop.sh  train_phase2.py  train_pinn_spectrum.py  train_sparse_reconstructor.py  visualize_pinn.py
backend/tests/: conftest.py  test_config.py  test_desktop_mode.py  test_e2e_pipeline.py  test_extract.py  test_extract_skip_validation.py  test_filename.py  test_mapping_parser.py  test_real_pipeline.py  test_touchstone.py
(+199 files in other folders)
