[project]
name = "aln-backend"
version = "0.1.1"
description = "谐振器测试数据平台 - FastAPI + Celery 后端"
requires-python = ">=3.12"
dependencies = [
    # Web 框架
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1",
    # 数据库
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    # 任务队列
    "celery[redis]>=5.4",
    "redis>=5.0",
    # 配置
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    # 算法依赖（与客户脚本一致）
    "numpy>=1.26",
    "scipy>=1.13",
    "pandas>=2.2",
    "scikit-rf>=1.2",
    "openpyxl>=3.1",
    "zipfile-deflate64>=0.2",
    "watchfiles>=1.0",
    "zipstream-ng>=1.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: real-broker / real-server end-to-end tests; require external worker+uvicorn (default skipped)",
]
